--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URI="mongodb+srv://efer:SJFW5JB6VHk6PJhD@cluster0.todpw.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+MONGO_URI="mongodb+srv://efer:...."
 PORT=5000
